# tg-crypto-monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.js
.github/workflows/: docker-build.yml
scripts/: __init__.py  create_telegram_application.py
tg_crypto_monitor/: __init__.py  config.py  main.py
tg_crypto_monitor/datatypes/: persistent_set.py
